--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         </span>
       </div>
     </div>
-  </div>  <!------------jhgjgkg-->
+  </div>  <!------------jhgjgkg--><!------------------uyrtyuwgekuhe-->
   <div class="col-3" id="icons">
     <span id="signIn">Sign in</span>&nbsp;&nbsp;&nbsp;&nbsp;
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill"
